backend/internal/architecture/testdata/invalid/internal/platform/fake_errors.go
package platform

import errors "example.com/fake"

var fakeSentinel = errors.New("mutable masquerade")
